--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "react-hook-form": "^7.52.1",
     "react-native": "^0.74.3",
     "react-native-gesture-handler": "^2.17.1",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-table-component": "^1.2.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
